syntax = "proto3";
option go_package = "./;proto";

//一个为ServerSide的服务
service ServerSide {
  //一个ServerSideHello的方法
  rpc ServerSideHello (ServerSideRequest) returns (stream ServerSideResp) {}
}

message ServerSideRequest{
  string name = 1;
}

message ServerSideResp{
  string message = 1;
}